--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,15 @@ dist.jar=${dist.dir}/Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4.jar
 file.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1.jar
 file.reference.h2-1.3.149.jar=/media/Data/java/h2-1.3.149.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
-    ${file.reference.h2-1.3.149.jar}
+    ${file.reference.h2-1.3.149.jar}:\
+    ${file.reference.commons-codec-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,12 +56,13 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-javadoc.jar
 javadoc.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.Main
+main.class=test.Auth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -74,6 +77,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-sources.jar
 source.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-sources.jar
 src.dir=src
 test.src.dir=test
