--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.jar=${dist.dir}/Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.7z.jar=/media/Data/LZMA SDK/Java/7z.jar
 file.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4.jar
 file.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1.jar
 file.reference.h2-1.3.149.jar=/media/Data/java/h2-1.3.149.jar
@@ -34,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.h2-1.3.149.jar}:\
-    ${file.reference.commons-codec-1.4.jar}
+    ${file.reference.commons-codec-1.4.jar}:\
+    ${file.reference.7z.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
