Added a class to generate fibonacci numbers

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,17 +26,19 @@ dist.jar=${dist.dir}/Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.7z.jar=/media/Data/LZMA SDK/Java/7z.jar
 file.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4.jar
 file.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1.jar
+file.reference.gtk2.10.jar=/usr/share/java/gtk2.10.jar
 file.reference.h2-1.3.149.jar=/media/Data/java/h2-1.3.149.jar
+file.reference.lzma-java-1.0.jar=/media/Data/java/lzma-java-1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.h2-1.3.149.jar}:\
     ${file.reference.commons-codec-1.4.jar}:\
-    ${file.reference.7z.jar}
+    ${file.reference.lzma-java-1.0.jar}:\
+    ${file.reference.gtk2.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.Auth
+main.class=test.Fibonacci
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -81,5 +83,6 @@ run.test.classpath=\
 source.encoding=UTF-8
 source.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-sources.jar
 source.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-sources.jar
+source.reference.gtk2.10.jar=/usr/share/java/gtk2.10-src.zip
 src.dir=src
 test.src.dir=test
