--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ file.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io
 file.reference.gtk2.10.jar=/usr/share/java/gtk2.10.jar
 file.reference.h2-1.3.149.jar=/media/Data/java/h2-1.3.149.jar
 file.reference.lzma-java-1.0.jar=/media/Data/java/lzma-java-1.0.jar
+file.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7.jar
+file.reference.xml-apis.jar=/media/Data/java/xerces-2_11_0/xml-apis.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +40,9 @@ javac.classpath=\
     ${file.reference.h2-1.3.149.jar}:\
     ${file.reference.commons-codec-1.4.jar}:\
     ${file.reference.lzma-java-1.0.jar}:\
-    ${file.reference.gtk2.10.jar}
+    ${file.reference.gtk2.10.jar}:\
+    ${file.reference.odfdom-java-0.8.7.jar}:\
+    ${file.reference.xml-apis.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,6 +66,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-javadoc.jar
 javadoc.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-javadoc.jar
+javadoc.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -84,5 +89,6 @@ source.encoding=UTF-8
 source.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-sources.jar
 source.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-sources.jar
 source.reference.gtk2.10.jar=/usr/share/java/gtk2.10-src.zip
+source.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7-sources.jar
 src.dir=src
 test.src.dir=test
