--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,14 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4.jar
 file.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1.jar
-file.reference.gtk2.10.jar=/usr/share/java/gtk2.10.jar
 file.reference.h2-1.3.149.jar=/media/Data/java/h2-1.3.149.jar
+file.reference.itextpdf-5.1.0.jar=/media/Data/java/itext/itextpdf-5.1.0.jar
+file.reference.jna.jar=/media/Data/java/VLCj/jna.jar
 file.reference.lzma-java-1.0.jar=/media/Data/java/lzma-java-1.0.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar=/media/Data/java/mysql-connector-java-5.1.16/mysql-connector-java-5.1.16-bin.jar
 file.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7.jar
+file.reference.platform.jar=/media/Data/java/VLCj/platform.jar
+file.reference.vlcj-1.1.3.jar=/media/Data/java/VLCj/vlcj-1.1.3.jar
 file.reference.xml-apis.jar=/media/Data/java/xerces-2_11_0/xml-apis.jar
 includes=**
 jar.compress=false
@@ -40,9 +44,13 @@ javac.classpath=\
     ${file.reference.h2-1.3.149.jar}:\
     ${file.reference.commons-codec-1.4.jar}:\
     ${file.reference.lzma-java-1.0.jar}:\
-    ${file.reference.gtk2.10.jar}:\
     ${file.reference.odfdom-java-0.8.7.jar}:\
-    ${file.reference.xml-apis.jar}
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.vlcj-1.1.3.jar}:\
+    ${file.reference.jna.jar}:\
+    ${file.reference.platform.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.16-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +61,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
@@ -66,7 +73,9 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-javadoc.jar
 javadoc.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-javadoc.jar
+javadoc.reference.itextpdf-5.1.0.jar=/media/Data/java/itext/itextpdf-5.1.0-javadoc.jar
 javadoc.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7-javadoc.jar
+javadoc.reference.vlcj-1.1.3.jar=/media/Data/java/VLCj/vlcj-1.1.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -74,6 +83,7 @@ javadoc.windowtitle=
 main.class=test.Fibonacci
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
@@ -88,7 +98,8 @@ run.test.classpath=\
 source.encoding=UTF-8
 source.reference.commons-codec-1.4.jar=/media/Data/java/commons-codec-1.4/commons-codec-1.4-sources.jar
 source.reference.commons-io-2.0.1.jar=/media/Data/java/commons-io-2.0.1/commons-io-2.0.1-sources.jar
-source.reference.gtk2.10.jar=/usr/share/java/gtk2.10-src.zip
+source.reference.itextpdf-5.1.0.jar=/media/Data/java/itext/itextpdf-5.1.0-sources.jar
 source.reference.odfdom-java-0.8.7.jar=/media/Data/java/odf/odfdom-java-0.8.7-sources.jar
+source.reference.vlcj-1.1.3.jar=/media/Data/java/VLCj/vlcj-1.1.3-sources.jar
 src.dir=src
 test.src.dir=test
